--- a/site_raw/_includes/less/main.less
+++ b/site_raw/_includes/less/main.less
@@ -13,6 +13,7 @@
 @grey: #999;
 @darkGrey: #4d4d4f;
 @nearlyBlack: #332e1f;
+@purple: rgb(185, 29, 71);
 
 @smallestFontSize: 11px;
 @smallFontSize: 12px;
@@ -228,6 +229,7 @@ small {
 .home-item.green1 { background-color: @green1; }
 .home-item.green2 { background-color: @green2; }
 .home-item.red { background-color: @red; }
+.home-item.purple { background-color: @purple; }
 .home-item.blue { background-color: @blue; }
 .home-item.lightGrey { background-color: @lightGrey; }
 .home-item.transparent { background-color: transparent; }
@@ -272,6 +274,7 @@ small {
   color: white;
   border-bottom-color: white;
 }
+
 .home-item-cntr .home-item-icon {
   position: absolute;
   right: 15px;
@@ -792,34 +795,41 @@ p.results-summary strong {
 }
 
 
-.packery-container .span4 {
-  width: 380px;
-}
 
 
 
 // Responsiveness
 .packery-container {  padding-left: 30px; }
+.packery-container .span4 {
+  width: 380px;
+}
+.packery-container .home-item {
+  height: 300px;
+}
 @media (max-width: 1199px) {
   .packery-container {  padding-left: 20px; }
   .packery-container .span4 {
     width: 305px;
   }
-
+  
 }
 @media (max-width: 979px) {
   .packery-container .span4 {
     width: 233px;
   }
-  /*.packery-container .home-item.home-item-physical {
-    height: 166px;
-  }*/
+  .home-item p.big {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .packery-container .home-item {
+    height: 180px;
+  }
   .packery-container {  padding-left: 20px; }
   a.filter-group-toggle { font-size: 18px; }
 
   .home-item.w1 { width: 100%; }
   .home-item.w2 { width: 100%; }
-  .home-item.h1 { height: auto;}
+  .home-item.h1 { height: 180px;}
   #home {
     margin-top: 30px;
   }
